--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "linter-clang",
   "main": "./lib/main",
-  "version": "3.4.6",
+  "version": "3.4.7",
   "description": "Lint C-based files using clang",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AtomLinter/linter-clang"
+    "url": "https://github.com/abyss7/linter-clang"
   },
   "license": "MIT",
   "engines": {
@@ -25,7 +25,7 @@
   "dependencies": {
     "atom-linter": "^8.0.0",
     "atom-package-deps": "^4.0.1",
-    "clang-flags": "^0.2.2"
+    "clang-flags": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^3.13.0",
