--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0"
   },
-  "packages-deps": [
+  "package-deps": [
     "linter"
   ],
   "eslintConfig": {
