--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0"
   },
-  "package-deps": [
-    "linter"
-  ],
+  "package-deps": [],
   "eslintConfig": {
     "extends": "airbnb-base",
     "rules": {
